--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="login_forget">忘记密码？</string>
     <string name="login_login">登 录</string>
-    <string name="login_tourist_mode">游客模式</string>
+    <string name="login_tourist_mode">拾音模式</string>
     <string name="login_verify_mode">验证码模式</string>
     <string name="login_password">请输入密码</string>
     <string name="login_password_mode">密码模式</string>
